force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Anchor_Filter__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Filter__c</fullName>
    <label>Anchor Filter</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional extra WHERE fragment used when resolving the Target Object record, e.g. Status__c = 'Active' AND Policy_Number__c = {json:policy.number}. {json:path} tokens are bound from the reviewed JSON. The first non-blank filter per mapping set and object wins.</description>
</CustomField>