force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Mapping_Set__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Set__c</fullName>
    <label>Mapping Set</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Groups rules per document type / use case (e.g. Estate_Intake). The service applies all active rules of one set.</description>
</CustomField>