force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <description>Optional per-rule override of the run mode. Blank = use the mode passed to JsonMappingService.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extraction</fullName>
                <label>Data Extraction</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
                <label>Compliance Check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>