force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>API name of the field on the target object that receives the JSON value.</description>
</CustomField>