force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>API name of the object to update (e.g. Case, Account, Estate_Case__c, Document__c). Must be reachable from the ContentDocument.</description>
</CustomField>