force-app/main/default/objects/JSON_Field_Mapping__mdt/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <label>Transform</label>
    <type>Text</type>
    <length>80</length>
    <description>Optional format hint for type coercion. For Date fields: yyyy-MM-dd (default), dd/MM/yyyy or MM/dd/yyyy.</description>
</CustomField>